--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,5 @@
 [server]
 headless = true
-address = "0.0.0.0"
-port = 5000
-
-[theme]
-base = "light"
-primaryColor = "#2E7D32"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F5F5F5"
-textColor = "#333333"
+port = 8501
+enableCORS = false
+enableXsrfProtection = false
